Updates the following files:
PhysicalDisplay.java
AutoHitHexDisplay.java
ExtraPanel.java
SystemPanel.java
PilotMapSet.java
ComputeECM.java
Game.java
InitiativeRoll.java
GameVictoryEvent.java